--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/xlsx": "^0.0.36",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.14.0",
     "eslint-config-next": "^15.0.0",
